--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.36.v20210114</version>
+                <configuration>
+                    <webAppSourceDirectory>web</webAppSourceDirectory>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                        <descriptor>WEB-INF/web.xml</descriptor>
+                    </webApp>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
