har file can now be parsed and sent to kafka

--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -61,4 +61,7 @@
     <listener>
         <listener-class>com.akto.listener.InitializerListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>com.akto.listener.KafkaListener</listener-class>
+    </listener>
 </web-app>
