--- a/libs/dao/pom.xml
+++ b/libs/dao/pom.xml
@@ -41,7 +41,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20211205</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
