--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -56,6 +56,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.akto.libs.integrations</groupId>
+            <artifactId>integrations</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-json-plugin</artifactId>
             <version>2.3.15.1</version>
