--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -18,6 +18,7 @@
         <module>dao</module>
         <module>utils</module>
         <module>oas-security</module>
+        <module>integrations</module>
     </modules>
 </project>
 
