--- a/libs/dao/pom.xml
+++ b/libs/dao/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>commons-validator</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.parser.v3</groupId>
+            <artifactId>swagger-parser</artifactId>
+            <version>2.0.27</version>
+        </dependency>
 
     </dependencies>
     <build>
