added mvn install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Prepare Dashboard UI
         working-directory: ./apps/dashboard/
         run: npm install && npm run build
+      - run: mvn install
       - run: mvn package
       - name: Configure AWS credentials
         if: ${{ github.event.inputs.Environment == 'staging' }}
