--- a/libs/dao/pom.xml
+++ b/libs/dao/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>3.2.3</version>
+        </dependency>
 
     </dependencies>
     <build>
