--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -33,6 +33,16 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>RateLimitFilter</filter-name>
+        <filter-class>com.akto.filter.RateLimitFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RateLimitFilter</filter-name>
+        <url-pattern>/auth/login</url-pattern>
+        <url-pattern>/api/inviteUsers</url-pattern>
+    </filter-mapping>
+
 
     <filter>
         <filter-name>UserDetailsFilter</filter-name>
