added https for jetty in docker file

--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -3,4 +3,5 @@ USER root
 RUN apt-get update -y
 RUN apt-get install -y --no-install-recommends libpcap-dev
 ADD ./target/dashboard.war /var/lib/jetty/webapps/root.war
+RUN echo "--module=http-forwarded" > /var/lib/jetty/start.d/http-forwarded.ini
 EXPOSE 8080
