--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <sonar.organization>akto-api-security</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <jacoco.version>0.7.5.201505241946</jacoco.version>     
+        <jacoco.version>0.8.5</jacoco.version>     
     </properties>
 
     <modules>
