--- a/apps/api-runtime/pom.xml
+++ b/apps/api-runtime/pom.xml
@@ -127,6 +127,15 @@
         </plugins>
         <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/version.txt</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
