--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -31,6 +31,11 @@
             <version>1.11.627</version>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-logs</artifactId>
+            <version>1.11.627</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
             <version>2.5.26</version>
