include files in jetty, set default font color, handle null version

--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -196,6 +196,13 @@
                     <include>**/version.txt</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/version.txt</exclude>
+                </excludes>
+            </resource>
         </resources>
         <plugins>
             <plugin>
