try getting code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 				</executions>
 				<configuration>
                     <destFile>${jacoco.reportPath}</destFile>
+                    <dataFile>${jacoco.reportPath}</dataFile>
                     <append>true</append>
 				</configuration>
             </plugin>                 
