use react in vue

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,8 +14,10 @@
     "@babel/core": "^7.13.10",
     "@babel/eslint-parser": "^7.13.10",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/plugin-transform-react-jsx": "7.12.11",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "7.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -29,13 +31,18 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-flow-renderer": "^10.3.12",
     "tippy.js": "^6.3.1",
     "tiptap": "^1.32.1",
     "tiptap-extensions": "^1.35.1",
     "vue": "^2.5.11",
     "vue-router": "^3.5.1",
+    "vuera": "^0.2.7",
     "vuetify": "^2.4.3",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "zustand": "^4.0.0"
   },
   "browserslist": [
     "> 1%",
