--- a/apps/dashboard/.babelrc
+++ b/apps/dashboard/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": ["@babel/preset-env",  "@babel/preset-react"],
   "plugins": ["@babel/plugin-proposal-object-rest-spread","@babel/plugin-transform-runtime"]
 }
