--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -18,12 +18,16 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "7.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@mdi/font": "^5.6.55",
+    "@mui/material": "^5.9.2",
     "are-you-es5": "^2.1.1",
     "axios": "^0.21.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -31,8 +35,8 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
     "react-flow-renderer": "^10.3.12",
     "tippy.js": "^6.3.1",
     "tiptap": "^1.32.1",
