workflow test schedular

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -29,15 +29,17 @@
     "@material-ui/core": "^4.12.4",
     "@mdi/font": "^5.6.55",
     "@mui/material": "^5.9.2",
+    "@mui/x-date-pickers": "^5.0.0",
     "are-you-es5": "^2.1.1",
     "axios": "^0.21.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "dayjs": "^1.11.5",
     "fiber": "^1.0.4",
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.12",
     "tippy.js": "^6.3.1",
     "tiptap": "^1.32.1",
