--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -88,6 +88,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.akto.apps.testing</groupId>
+            <artifactId>testing</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-json-plugin</artifactId>
             <version>2.5.30</version>
