--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -73,6 +73,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.akto.apps.api-analyser</groupId>
+            <artifactId>api-analyser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.akto.libs.dao</groupId>
             <artifactId>dao</artifactId>
             <version>${project.version}</version>
