--- a/libs/dao/pom.xml
+++ b/libs/dao/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>3.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
 
     </dependencies>
     <build>
