--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -30,6 +30,7 @@
     "@mdi/font": "^5.6.55",
     "@mui/material": "^5.9.2",
     "@mui/x-date-pickers": "^5.0.0",
+    "@puppeteer/replay": "^2.7.1",
     "are-you-es5": "^2.1.1",
     "axios": "^0.21.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -38,6 +39,7 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
+    "puppeteer": "^19.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.12",
