--- a/apps/testing/Dockerfile
+++ b/apps/testing/Dockerfile
@@ -7,6 +7,6 @@ RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash
 RUN apt-get install nodejs
 RUN node --version
 RUN npm --version
-RUN npm install puppeteer
+RUN npm install puppeteer -g --unsafe-perm=true --allow-root
 RUN npm install @puppeteer/replay
 CMD "java" "-XX:+ExitOnOutOfMemoryError" "-jar" "/app/testing-1.0-SNAPSHOT-jar-with-dependencies.jar"
