--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -10,6 +10,6 @@ RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash
 RUN apt-get install nodejs
 RUN node --version
 RUN npm --version
-RUN npm install puppeteer
+RUN npm install puppeteer -g --unsafe-perm=true --allow-root
 RUN npm install @puppeteer/replay
 EXPOSE 8080
