--- a/apps/testing/Dockerfile
+++ b/apps/testing/Dockerfile
@@ -1,9 +1,9 @@
 FROM amazoncorretto:8
 WORKDIR /app
 COPY ./target/testing-1.0-SNAPSHOT-jar-with-dependencies.jar /app/testing-1.0-SNAPSHOT-jar-with-dependencies.jar
-RUN yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-RUN yum install libuv --disableplugin=priorities
-RUN yum install nodejs npm --enablerepo=epel-testing
+RUN yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+RUN yum install -y libuv --disableplugin=priorities
+RUN yum install -y nodejs npm --enablerepo=epel-testing
 RUN node --version
 RUN npm --version
 RUN npm install puppeteer
