--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -99,6 +99,9 @@
         <listener-class>com.akto.listener.InitializerListener</listener-class>
     </listener>
     <listener>
+        <listener-class>com.akto.listener.RuntimeListener</listener-class>
+    </listener>
+    <listener>
         <listener-class>com.akto.listener.KafkaListener</listener-class>
     </listener>
     <listener>
