exclude jacoco for plugin jar

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,9 @@
 					</execution>
 				</executions>
 				<configuration>
+                    <excludes>
+                        <exclude>Akto.jar</exclude>
+                    </excludes>
                     <destFile>${jacoco.reportPath}</destFile>
                     <dataFile>${jacoco.reportPath}</dataFile>
                     <append>true</append>
