--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -4,4 +4,5 @@ RUN apt-get update -y
 RUN apt-get install -y --no-install-recommends libpcap-dev
 ADD ./target/dashboard.war /var/lib/jetty/webapps/root.war
 RUN echo "--module=http-forwarded" > /var/lib/jetty/start.d/http-forwarded.ini
+RUN echo "jetty.httpConfig.sendServerVersion=false" > /var/lib/jetty/start.d/server.ini
 EXPOSE 8080
