--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,17 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      Tag:
+        required: true
+        default: 'local'
+      Environment:
+        required: true
+        type: choice
+        options:
+          - prod
+          - staging
+        default: staging  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
