--- a/libs/utils/pom.xml
+++ b/libs/utils/pom.xml
@@ -110,7 +110,11 @@
             <artifactId>kafka-clients</artifactId>
             <version>3.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>20.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
