handled grpc request

--- a/libs/dao/pom.xml
+++ b/libs/dao/pom.xml
@@ -101,7 +101,11 @@
             <artifactId>integrations</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.21.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
