--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Prepare Dashboard UI
         working-directory: ./apps/dashboard/
         run: npm install && npm run build
-      - run: mvn package -Dakto-image-tag=${{ github.event.inputs.Tag }} -Dakto-build-time=$(eval "date +%s")
+      - run: mvn package -Dakto-image-tag=${{ github.event.inputs.release_version }} -Dakto-build-time=$(eval "date +%s")
       - name: Configure AWS credentials
         if: ${{ github.event.inputs.Environment == 'staging' }}
         uses: aws-actions/configure-aws-credentials@v1
